# rishav-prasad-manufac-fast-api

./: Dockerfile  LICENSE  README.md  main.py  pyproject.toml
models/: data_model.py
services/: analysis_service.py
uploads/: sample.csv
utils/: csv_parser.py
